tests/functional/lang/eval-fail-fetchTree-unknown-type.err.exp
error:
       … while calling the 'fetchTree' builtin
         at /pwd/lang/eval-fail-fetchTree-unknown-type.nix:1:1:
            1| builtins.fetchTree {
             | ^
            2|   type = "foo";

       error: unsupported input type 'foo'
